fixed white space in right of tab

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+body{
+    overflow-x: hidden;
+}
+
 .dark-translucent {
     background-image: url("../img/headerBack.png");
     background-size: cover;
